--- a/index.css
+++ b/index.css
@@ -49,8 +49,16 @@ li {
     display: none;
 }
 
+.menu-toggle, .currency-check {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+}
+
 .menu-toggle:checked ~ .navbar-overlay {
-    display: block;
+    display: flex;
+    opacity: 1;
+    pointer-events: none;
 }
 
 .logo-containter-overlay {
@@ -856,8 +864,7 @@ footer {
         display: flex;
         flex-direction: column;
         gap: 8px;
-        /* margin-right: -14px;  */
-        /* 26px middle*/
+        margin-right: -14px; /* 26px middle*/
     }
     .menu-toggle:checked + .hamberger svg:first-child {
         transform: translateY(5px) rotate(-45deg);
@@ -938,8 +945,7 @@ footer {
         display: flex;
         flex-direction: column;
         gap: 8px;
-        /* margin-right: -14px;  */
-        /* 26px middle*/
+        margin-right: -14px; /* 26px middle*/
     }
     .menu-toggle:checked + .hamberger svg:first-child {
         transform: translateY(5px) rotate(-45deg);
