--- a/index.css
+++ b/index.css
@@ -5,6 +5,15 @@
     font-size: 13px;
 }
 
+@font-face {
+    font-family: 'Hanken Grotesk';
+    src: url('asset/fonts/HankenGrotesk-Black.ttf');
+}
+
+.hanken-header {
+    font-family: 'Hanken Grotesk', Arial, Helvetica, sans-serif;
+}
+
 /*  */
 .flex {
     display: flex;
