--- a/index.css
+++ b/index.css
@@ -264,6 +264,11 @@ header {
 /* section 2-3 */
 .section23-hv {
     transition: opacity 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .section23-hv:hover {
     opacity: 0.6;
