--- a/index.css
+++ b/index.css
@@ -137,7 +137,8 @@ li {
     grid-template-rows: 1fr;
 }
 
-.editorial-text {
+.editorial-check:checked ~ .editorial-label .editorial-text {
+    transition: font-size 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     font-size: 18px; font-weight: 700;
 }
 
