--- a/index.css
+++ b/index.css
@@ -72,7 +72,6 @@ li {
     display: none;
 }
 .hamberger {
-    display: flex;
     flex-direction: column;
     gap: 8px;
     /* margin-right: -14px;  */
@@ -899,6 +898,10 @@ footer {
     }
 
     /* Heaeder */
+    .hamberger {
+        display: flex;
+    }
+
     .navbar-header {
         display: none;
     }
